# cpp_practise

./: CMakeLists.txt  CastTest.cpp  CastTest.h  README.md  main.cpp
chapter01/: ArrayTest.cpp  OverrideTest.cpp
chapter02/: MyDate.cpp  MyDate.h  Student.cpp  Student.h
chapter03/: CppBean.cpp  CppBean.h  FriendMethod.cpp  FriendMethod.h  JD.cpp  JD.h  School.cpp  School.h  varTest.cpp
chapter04/: A.cpp  B.cpp  Main.cpp  Math.cpp  Math.h
chapter05/: BaseClass.cpp  Main.cpp  SubClass.cpp
chapter06/: A.cpp  A.h  B.cpp  B.h  Main.cpp
chapter07/: Main.cpp
chapter1/: CodeAnswer1.cpp
